--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,95 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# mac
+.DS_STORE
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
+# windows
+Thumbs.db
 
 # misc
-.DS_Store
+*.tgz
 *.pem
+*.lock
+info/
 
-# debug
+# logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# vercel
-.vercel
+# coverage directory
+coverage/
+coverage.json
+
+# unit test reports
+TEST*.xml
+
+# npm cache directory
+.npm/
+
+# eslint cache
+.eslintcache/
+
+# dotenv
+.env
+.env.test
+
+# next.js
+.next/
+
+# serverless
+.serverless/
+
+# azure Functions artifacts
+azure-functions-core-tools/
+bin/
+obj/
+appsettings.json
+local.settings.json
+
+# hardhat files
+cache/
+artifacts/
+typechain/
+typechain-types/
+
+# swagger
+swagger.json
+
+# java
+target/
+*.class
+*.jar
+*.war
+
+# python
+*.py[cod]
+**/__pycache__/
+.pytest_cache/
+
+# javascript
+node_modules/
+dist/
+
+# c / c++
+build-debug/
+build-release/
+
+# compiled binary
+build/
+
+# vscode
+.vscode/
+
+# intelliJ
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# project specific
+
